--- a/ProblemsSolutions/ProblemsSolutions.vcxproj
+++ b/ProblemsSolutions/ProblemsSolutions.vcxproj
@@ -149,10 +149,12 @@
   <ItemGroup>
     <ClCompile Include="ProblemsSolutions.cpp" />
     <ClCompile Include="StringPermutation.cpp" />
+    <ClCompile Include="StringReverse.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="QuestionTag.h" />
     <ClInclude Include="StringPermutation.h" />
+    <ClInclude Include="StringReverse.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
