--- a/ProblemsSolutions/ProblemsSolutions.vcxproj.filters
+++ b/ProblemsSolutions/ProblemsSolutions.vcxproj.filters
@@ -35,5 +35,14 @@
     <ClInclude Include="StringReverse.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Node.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="SLinkedList.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="SLListReverse.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
