--- a/ProblemsSolutions/ProblemsSolutions.vcxproj.filters
+++ b/ProblemsSolutions/ProblemsSolutions.vcxproj.filters
@@ -24,6 +24,9 @@
     <ClCompile Include="StringReverse.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="LongestSubstring.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="QuestionTag.h">
@@ -45,6 +48,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="SLListReverseWithoutRecursion.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="LongestSubstring.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
